--- a/assets/style/advantage/advantage.css
+++ b/assets/style/advantage/advantage.css
@@ -14,19 +14,22 @@
 }
 
 .advantage__row {
+    display: flex;
+    gap: 50px;
     counter-reset: count 0;
     position: relative;
 }
 
-.swiper {
-    max-width: 934px;
-    margin: 0 auto;
+.advantage__row-item {
+    flex: 0 0 calc((100% - (50px * 3)) / 4);
 }
 
-.advantage__row-item {
+.advantage__row-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--background-white, #f9f9f9);
+    position: relative;
 }
 
 .advantage__row-counter {
@@ -59,19 +62,19 @@
     line-height: 28px;
 }
 
-.advantage__arrow-prev {
-    left: 0;
-    top: 50%;
-    transform: translate(0px, -50%);
+.advantage__false-input {
+    display: none;
 }
 
-.advantage__arrow-next {
-    right: 0;
-    top: 50%;
-    transform: translate(0px, -50%);
+.advantage__slider-prev {
+    left: 25px;
 }
 
-.advantage__arrow-prev, .advantage__arrow-next {
+.advantage__slider-next {
+    right: 25px;
+}
+
+.advantage__slider-prev, .advantage__slider-next {
     display: none;
     align-items: center;
     justify-content: center;
@@ -81,31 +84,24 @@
     color: #434343;
     background-color: #fff;
     box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.05);
+    transition: color 0.2s ease, background-color 0.2s ease;
     position: absolute;
-    z-index: 5;
+    top: 50%;
+    transform: translate(0px, -50%);
+    z-index: 99;
+    cursor: pointer;
 }
 
-.advantage__arrow-prev:hover, .advantage__arrow-next:hover {
+.advantage__slider-prev:hover, .advantage__slider-next:hover {
     color: #fff;
     background-color: #797d8c;
 }
-.advantage__arrow-prev:active, .advantage__arrow-next:active {
-    color: #fff;
-    background-color: #525768;
-}
 
-.advantage__arrow-prev.swiper-button-disabled, 
-.advantage__arrow-prev:hover.swiper-button-disabled, 
-.advantage__arrow-prev:active.swiper-button-disabled {
-    color: #ebebeb;
-    background-color: #fff;
-}
-
-.advantage__arrow-next.swiper-button-disabled, 
-.advantage__arrow-next:hover.swiper-button-disabled, 
-.advantage__arrow-next:active.swiper-button-disabled {
-    color: #ebebeb;
-    background-color: #fff;
+#slide-1:checked ~ #first-slide,
+#slide-2:checked ~ #second-slide,
+#slide-3:checked ~ #third-slide,
+#slide-4:checked ~ #forth-slide {
+    z-index: 9;
 }
 
 @media (max-width:1023px){
@@ -136,22 +132,43 @@
 }
 
 @media (max-width:769px) {
+    .advantage {
+        padding-bottom:250px;
+    }
+
+    .advantage__row {
+        display: block;
+    }
+
+    .advantage__row-item {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 180px;
+        width: 100%;
+    }
+
+    .advantage__row-container {
+        z-index: 2;
+        margin: 0 -25px;
+    }
+
     .advantage__row-text {
         max-width: 166px;
     }
 
-    .advantage__arrow-prev {
+    .advantage__slider-prev {
         display: flex;
     }
     
-    .advantage__arrow-next {
+    .advantage__slider-next {
         display: flex;
     }
 }
 
 @media (max-width:499px) {
     .advantage {
-        padding-bottom: 60px;
+        padding-bottom: 240px;
     }
 
     .advantage__title {
@@ -166,6 +183,18 @@
         margin: 0 auto 40px auto;
         font-size: 12px;
         line-height: 17px;
+    }
+
+    .advantage__slider-prev {
+        left: 15px;
+    }
+    
+    .advantage__slider-next {
+        right: 15px;
+    }
+
+    .advantage__row-container {
+        margin: 0 -15px;
     }
 
     .advantage__row-text {
