--- a/assets/style/advantage/advantage.css
+++ b/assets/style/advantage/advantage.css
@@ -1,13 +1,17 @@
+.advantage {
+    padding-bottom: 71px;
+}
+
 .advantage__title {
-    margin: 0 0 25px 0;
+    margin: 0 0 24px 0;
 }
 
 .advantage__subtitle {
-    margin: 0 0 35px 0;
+    margin: 0 0 34px 0;
 }
 
 .advantage__text {
-    margin: 0 auto 50px auto;
+    margin: 0 auto 58px auto;
     max-width: 724px;
     font-size: 18px;
     line-height: 25px;
@@ -16,6 +20,8 @@
 .advantage__row {
     display: flex;
     gap: 50px;
+    margin: 0 auto;
+    max-width: 934px;
     counter-reset: count 0;
     position: relative;
 }
@@ -46,10 +52,11 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    padding: 10px 0 0 0;
     transform: translate(-50%, -50%);
     font-weight: 500;
-    font-size: 52px;
-    line-height: 73px;
+    font-size: 56px;
+    line-height: 80px;
     text-align: center;
     color: var(--text-white, #ffffff);
     z-index: 3;
@@ -105,27 +112,44 @@
 }
 
 @media (max-width:1023px){
+    .advantage {
+        padding-bottom: 73px;
+    }
+    
     .advantage__title {
         margin: 0 0 23px 0;
     }
 
     .advantage__subtitle {
-        margin: 0 0 33px 0;
+        margin: 0 0 30px 0;
     }
 
     .advantage__text {
+        margin: 0 auto 59px auto;
         max-width: 620px;
         font-size: 16px;
         line-height: 23px;
     }
 
     .advantage__row-counter {
-        margin: 0 0 26px 0;
+        margin: 0 0 25px 0;
         width: 104px;
         height: 104px;
     }
 
+    .advantage__row-counter::after {
+        padding: 2px 0 0 0;
+        font-weight: 500;
+        font-size: 50px;
+        line-height: 70px;
+        text-align: center;
+        color: var(--text-white, #ffffff);
+        z-index: 3;
+        counter-increment: count;
+    }
+
     .advantage__row-text {
+        margin: 0 5px 0 0;
         font-size: 18px;
         line-height: 25px;
     }
@@ -168,19 +192,20 @@
 
 @media (max-width:499px) {
     .advantage {
-        padding-bottom: 240px;
+        padding-top: 31px;
+        padding-bottom: 242px;
     }
 
     .advantage__title {
-        margin: 0 0 15px 0;
+        margin: 0 0 17px 4px;
     }
 
     .advantage__subtitle {
-        margin: 0 0 26px 0;
+        margin: 0 0 29px 0;
     }
 
     .advantage__text {
-        margin: 0 auto 40px auto;
+        margin: 0 auto 41px auto;
         font-size: 12px;
         line-height: 17px;
     }
