--- a/assets/style/questions/questions.css
+++ b/assets/style/questions/questions.css
@@ -3,7 +3,7 @@
 }
 
 .questions__title {
-    margin: 0 0 17px 0;
+    margin: 0 24px 18px 0;
 }
 
 .questions__subtitle {
@@ -15,18 +15,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto 50px auto;
+    margin: 0 auto 52px auto;
 }
 
 .questions__fieldset {
-    margin: 0 0 50px 0;
+    margin: 0 0 48px 0;
     padding: 0;
     max-width: 424px;
     border: none;
 }
 
 .questions__input {
-    margin: 0 0 21px 0;
+    margin: 0 0 19px 0;
     padding: 9px 25px;
     width: 100%;
     font-size: 22px;
@@ -57,11 +57,15 @@
 
 @media (max-width:1023px) {
     .questions {
-        padding-bottom: 56px;
+        padding-bottom: 58px;
     }
 
     .questions__title {
-        margin: 0 0 15px 0;
+        margin: 0 5px 15px 0;
+    }
+
+    .questions__subtitle {
+        margin: 0 -15px 49px 0;
     }
 
     .questions__form {
@@ -73,7 +77,7 @@
     }
 
     .questions__input {
-        margin: 0 0 20px 0;
+        margin: 0 0 18px 0;
         padding: 8px 23px;
         font-size: 20px;
         line-height: 23px;
@@ -87,7 +91,7 @@
 
 @media (max-width:499px) {
     .questions {
-        padding-bottom: 30px;
+        padding-bottom: 28px;
     }
 
     .questions__title {
@@ -105,11 +109,11 @@
     }
 
     .questions__fieldset {
-        margin: 0 0 45px 0;
+        margin: 0 0 42px 0;
     }
 
     .questions__input {
-        margin: 0 0 15px 0;
+        margin: 0 0 14px 0;
         padding: 6px 18px;
         font-size: 14px;
         line-height: 16px;
